First commited as before_111220_rev1